<resources>
    <string name="app_name">AIP</string>
    <string name="sharedPreferenceId">SharedPreference</string>
    <!--    login    -->
    <string name="login_identifier">Login</string>
    <string name="login_password">Password</string>
    <string name="login_adress">Adress</string>
    <string name="login_port">Port</string>
    <string name="login_test">Test</string>
    <string name="login_connection">Connexion</string>

    <!--    menu    -->
    <string name="menu_progress">ON-GOING ELEMENTS</string>
    <string name="menu_historical">HISTORY</string>
    <!--    requestList    -->
    <string name="request_amount_text">%1$s €</string>

    <!--    request status   -->
    <string name="request_status_ongoing">In approbation</string>
    <string name="request_status_accepted">Completed</string>
    <string name="request_status_denied">Refused</string>
    <string name="request_status_accepted_closed">Completed and Closed</string>
    <string name="request_status_closed">Closed</string>
    <string name="request_status_canceled">Cancelled</string>
    <string name="request_status_unknown">Statut inconnu</string>

    <!--    request    -->
    <string name="request_beneficiary">Beneficiary: </string>
    <string name="request_center">Cost center: </string>
    <string name="request_site">Site: </string>
    <string name="request_project">Project: </string>
    <string name="request_date">Delivery date: </string>
    <string name="request_supplier">Supplier: </string>
    <string name="request_amount_local">Amount in local cur.: </string>
    <string name="request_amount_bought">Amount in purch. cur.: </string>
    <string name="request_budget_estimated">Budgeted amount: </string>
    <string name="request_budget_used">Engaged amount: </string>
    <!-- requestDetail -->
    <string name="request_detail_total_price">Line total : </string>
    <string name="request_detail_quantity">Quantity : </string>
    <string name="request_detail_unitary_price"> - Amount : </string>
    <string name="request_detail_data_price">%1$s EUR</string>
    <!--    section    -->
    <string name="section_attachement"> ATTACHMENTS  (%1$d)</string>
    <string name="section_notes">NOTES (%1$d)</string>
    <string name="section_detail">DETAILS</string>
    <string name="section_texte">Text</string>
    <string name="section_modification_detail">MODIFICATION DETAILS</string>

    <!--    navigation    -->
    <string name="navigation_historical">HISTORY </string>
    <string name="navigation_ongoing">ON-GOING ELEMENTS</string>
    <string name="navigation_original_request">original order</string>
    <string name="navigation_modified_request">modified order</string>
    <!--    toolbar    -->
    <string name="toolbar_historical">HISTORY </string>
    <string name="toolbar_ongoing">ON-GOING ELEMENTS</string>
    <string name="toolbar_back">back</string>
    <!--    modification    -->
    <string name="modification_before">before</string>
    <string name="modification_now">now</string>
    <!--    validation    -->
    <string name="validation_validate">You are going to validate the request</string>
    <string name="validation_question">You need information concerning the request</string>
    <string name="validation_refuse">You are going to refuse the request</string>
    <string name="validation_comment_title">You can comment your choice:</string>
    <string name="validation_button_validation">Validate</string>
    <string name="validation_button_accept">You need information concerning the request</string>
    <string name="validation_button_explain">You asked information concerning the request</string>
    <string name="validation_button_denied">You refused the request</string>

    <string name="update_validator_success">Modification completed</string>


    <string name="attachment_format_incompatible">Ce format de fichier n\'est pas visualisable</string>
    <string name="get_attachment_ws_error">Erreur à la récupération de la pièce-jointe</string>
    <!-- Popup labels -->
    <string name="pop_up_ok">OK</string>
    <string name="pop_up_cancel">Annuler</string>

    <!--  Login -->
    <string name="login_error_login_empty">You have to fill a user name</string>
    <string name="login_error_password_empty">You have to fill a password</string>
    <string name="login_error_server_empty">You have to fill the server name</string>
    <string name="login_error_port_empty">You have to fill the server port</string>

    <string name="login_ws_error">Couldn\'t reach the specified server</string>
    <string name="login_ws_ok">Connection performed</string>



    <!-- WS retour -->
    // API Errors
    <string name="ws_error_404">Failed to get data</string>
    <string name="ws_error_unknown">Unexpected error occurred</string>
    <string name="ws_no_data">No available data</string>

    <!-- Notifications -->
    <string name="notification_new_data">You have a new request. Please refresh.</string>

    <string name="button_load_text">Load file</string>

</resources>