<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp">

    <ImageView
        android:id="@+id/iv_type"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_request_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/iv_type"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_request_detail_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_request_detail_item"
        android:text="@string/request_detail_total_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_request_detail_title"/>

    <TextView
        android:id="@+id/tv_request_detail_total_amount_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_request_detail_item"
        app:layout_constraintStart_toEndOf="@+id/tv_request_detail_total_amount"
        app:layout_constraintTop_toBottomOf="@+id/tv_request_detail_title"/>

    <TextView
        android:id="@+id/tv_request_detail_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_request_detail_item"
        android:text="@string/request_detail_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_request_detail_total_amount"/>

    <TextView
        android:id="@+id/tv_request_detail_amount_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_request_detail_item"
        app:layout_constraintStart_toEndOf="@+id/tv_request_detail_amount"
        app:layout_constraintTop_toBottomOf="@+id/tv_request_detail_total_amount"/>

    <TextView
        android:id="@+id/tv_request_detail_unitary_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_request_detail_item"
        android:text="@string/request_detail_unitary_price"
        app:layout_constraintStart_toEndOf="@+id/tv_request_detail_amount_data"
        app:layout_constraintTop_toBottomOf="@+id/tv_request_detail_total_amount"/>

    <TextView
        android:id="@+id/tv_request_detail_unitary_price_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_request_detail_item"
        app:layout_constraintStart_toEndOf="@+id/tv_request_detail_unitary_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_request_detail_total_amount"/>

    <TextView
        android:id="@+id/tv_section_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:text="@string/section_notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_request_detail_amount" />

    <TextView
        android:id="@+id/tv_section_attachement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:text="@string/section_attachement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_section_notes" />



    <TextView
        android:id="@+id/tv_section_texte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginVertical="10dp"
        android:text="@string/section_texte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_section_attachement" />

    <TextView
        android:id="@+id/tv_section_modification_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:visibility="gone"
        android:layout_marginVertical="15dp"
        android:text="@string/section_modification_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_section_texte" />

</androidx.constraintlayout.widget.ConstraintLayout>