<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include
        android:id="@+id/included_toolbar"
        layout="@layout/custom_toolbar_request"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validation_validate"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/included_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_commentary_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validation_comment_title"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/et_commentary_bloc"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:hint="commentaire"
        app:layout_constraintTop_toBottomOf="@+id/tv_commentary_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/validation_button_validation"
        android:textAllCaps="true"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="@+id/et_commentary_bloc"
        app:layout_constraintTop_toBottomOf="@+id/et_commentary_bloc"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="gone"
        android:indeterminateTint="@color/progressbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>